腳手架版本測試

--- a/public/index.html
+++ b/public/index.html
@@ -30,42 +30,10 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
     </div>
-    <div> test </div>
-    <div class="box1"></div>
-    <div class="box2"></div>
+    <div id="abb">
+    </div>
+    <img src="logo192.png">
 
-
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-    <script src="../node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
-    <script type="text/JavaScript">
-    //jquery 
-        $(document).ready(function () {
-          $(".box1").dblclick(function () {
-            $(".box2").toggle();
-    })
-    $(".box1").append('<h1>hello</h1>');
-    
-    // $(".productTitle").click(function () {
-    //     $(".content").toggle();
-    // })
-    // $(".closeBtn").click(function () {
-    //     $(".fullScreen").addClass("close");
-    // })
-    // $(".open").click(function () {
-    //     $(".fullScreen").removeClass("close");
-    // })
-
-})
-    </script>
 
   </body>
 
